gac_sb/objects/AppCIRtimeSheet__c.object
<CustomObject>
    <description>APPLICATION CIR - Permet de suivre les temps passés par les consultants par mission CIR et par étape</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <description>La durée passé en jour (compris entre 0 et 1):
1 = toute la journée
0.5 = une demi-journée</description>
        <label>Durée</label>
        <precision>3</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Audit__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_Audit__c || Date__c &gt; Mission_CIR__r.Date_echeance_validation_perimetre__c</formula>
        <label>Hors phase - Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Justification__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_justification__c || Date__c &gt; Mission_CIR__r.Date_echeance_DT__c</formula>
        <label>Hors phase - Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hors_phase_Valorisation__c</fullName>
        <formula>Date__c &lt; Mission_CIR__r.Date_debut_valorisation__c || Date__c &gt; Mission_CIR__r.Date_echeance_CERFA__c</formula>
        <label>Hors phase - Valorisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Valorisation</fullName>
                </value>
                <value>
                    <fullName>Justification</fullName>
                </value>
                <value>
                    <fullName>Contrôle</fullName>
                </value>
                <value>
                    <fullName>Formation</fullName>
                </value>
                <value>
                    <fullName>Administratif</fullName>
                </value>
                <value>
                    <fullName>Disponibilité</fullName>
                </value>
                <value>
                    <fullName>Avant-Vente / AO</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>AS/DI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_technique__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(Phase__c), &apos;Avant-Vente / AO&apos;, &apos;AvantVenteAO&apos;), &apos;Disponibilité&apos;, &apos;Disponibilite&apos;), &apos;Contrôle&apos;, &apos;Controle&apos;), &apos;AS/DI&apos;, &apos;ASDI&apos;)</formula>
        <label>Phase technique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semaine__c</fullName>
        <description>Rempli par Workflow</description>
        <label>Semaine</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theorique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Théorique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilisateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilisateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>[OLD] TimeSheet CIR</label>
    <nameField>
        <displayFormat>TS-{000000000}</displayFormat>
        <label>Nom de la TimeSheet CIR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>[OLD] TimeSheets CIR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duree_entre_0_et_1</fullName>
        <active>true</active>
        <description>La durée de la TimeSheet doit être comprise entre 0 et 1</description>
        <errorConditionFormula>Duree__c &lt; 0 || Duree__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Duree__c</errorDisplayField>
        <errorMessage>La durée de la TimeSheet doit être comprise entre 0 et 1</errorMessage>
    </validationRules>
</CustomObject>